--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
 }
 .item a{
     text-decoration: none;
